Avoid page break on cutlist

--- a/bitbelt/static/styles/pages/_project-cutlist.scss
+++ b/bitbelt/static/styles/pages/_project-cutlist.scss
@@ -44,5 +44,9 @@
             background: white !important;
             color: $charcoal !important;
         }
+
+        .row {
+            page-break-inside: avoid;
+        }
     }
 }
